force-app/main/default/objects/CommonCarrierOverrideZipcode__c/CommonCarrierOverrideZipcode__c.object-meta.xml
<CustomObject>
    <label>CommonCarrierOverrideZipcode</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>CommonCarrierZipcodeOverride Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CommonCarrierOverrideZipcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>