force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/Delzone__c.field-meta.xml
<CustomField>
    <fullName>Delzone__c</fullName>
    <label>Delzone</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>