force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/DISTNET__c.field-meta.xml
<CustomField>
    <fullName>DISTNET__c</fullName>
    <label>DISTNET</label>
    <length>3</length>
    <type>Text</type>
</CustomField>