force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <label>Facility Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>