force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>8</length>
    <type>Text</type>
</CustomField>