force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/Installzone__c.field-meta.xml
<CustomField>
    <fullName>Installzone__c</fullName>
    <label>Installzone</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>