force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/Leaddays__c.field-meta.xml
<CustomField>
    <fullName>Leaddays__c</fullName>
    <label>Leaddays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>