force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/PLANT__c.field-meta.xml
<CustomField>
    <fullName>PLANT__c</fullName>
    <label>PLANT</label>
    <length>5</length>
    <type>Text</type>
</CustomField>