force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/Shipzone__c.field-meta.xml
<CustomField>
    <fullName>Shipzone__c</fullName>
    <label>Shipzone</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>