force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/Store_MDO_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_MDO_Name__c</fullName>
    <label>Store/MDO Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>