force-app/main/default/objects/CommonCarrierOverrideZipcode__c/fields/USLOC__c.field-meta.xml
<CustomField>
    <fullName>USLOC__c</fullName>
    <label>USLOC</label>
    <length>5</length>
    <type>Text</type>
</CustomField>